--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,6 @@
   font-size: larger;
 }
 
-.story{
-  height: 60px;
-}
-
 .dp{
   height: 20px;
   width: 20px;
@@ -39,4 +35,32 @@
 
 .caption{
   width: 300px;
+}
+
+.suggestion h5{
+  font-size: 14px;
+}
+
+.suggestion .dp{
+  margin-top: 0px !important;
+}
+
+.story-dp{
+  width: 40px;
+  height: 40px;
+  
+}
+
+.gradient_border{
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: linear-gradient(45deg, #ff00ff,#ff6600,#ffcc00);
+}
+
+.story{
+  margin-top: 20px;
 }
