--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,30 @@
 .story{
   margin-top: 20px;
 }
+
+.nav-item {
+  text-decoration: none;
+  color: rgb(0, 0, 0); 
+}
+
+.nav-item:hover{
+  color: gray;
+}
+
+.sug{
+  position:fixed;
+}
+
+.profile{
+  width:100px;
+  height: 100px;
+}
+
+.proname{
+  text-align: center;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column; 
+}
